// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Dropdown - renders 1`] = `
<Fragment>
  <div
    className="dropdown anchor-top-left "
    data-disable-default-keyboard-nav={null}
    id={null}
  >
    

    <div
      className="toggle-menu-container"
    >
      <DropdownToggle
        iconAfter={true}
      />
      <div
        aria-labelledby="dropdownToggle"
        className="dropdown-menu   "
      >
        

      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Component: Dropdown - renders children components passed as content prop inside the menu list 1`] = `
<Fragment>
  <div
    className="dropdown anchor-top-left "
    data-disable-default-keyboard-nav={null}
    id={null}
  >
    

    <div
      className="toggle-menu-container"
    >
      <DropdownToggle
        icon="sort"
        iconAfter={true}
        isIconButton={true}
        label="Sort"
      />
      <div
        aria-labelledby="dropdownToggle"
        className="dropdown-menu  p-3 "
      >
        

        <a
          href="#"
        >
          <i
            aria-hidden="true"
            className="material-icons"
          >
            bookmark
          </i>
          Edit
        </a>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Component: Dropdown - renders error state with the error icon and an error text 1`] = `
<Fragment>
  <div
    className="dropdown anchor-top-left  has-error"
    data-disable-default-keyboard-nav={null}
    id={null}
  >
    

    <div
      className="toggle-menu-container"
    >
      <DropdownToggle
        iconAfter={true}
      />
      <div
        aria-labelledby="dropdownToggle"
        className="dropdown-menu   "
      >
        

      </div>
    </div>
    <div
      className="help-block"
    >
      <i
        className="material-icons"
      >
        error
      </i>
      test error message
    </div>
    

  </div>
</Fragment>
`;

exports[`Component: Dropdown - renders the toggle button with the icon being either before or after the icon is after the text 1`] = `
<Fragment>
  <div
    className="dropdown anchor-top-left "
    data-disable-default-keyboard-nav={null}
    id={null}
  >
    

    <div
      className="toggle-menu-container"
    >
      <DropdownToggle
        icon="filter_list"
        iconAfter={true}
        isIconButton={false}
        label="Filter"
      />
      <div
        aria-labelledby="dropdownToggle"
        className="dropdown-menu   "
      >
        

      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Component: Dropdown - renders the toggle button with the icon being either before or after the icon is before the text 1`] = `
<Fragment>
  <div
    className="dropdown anchor-top-left "
    data-disable-default-keyboard-nav={null}
    id={null}
  >
    

    <div
      className="toggle-menu-container"
    >
      <DropdownToggle
        icon="filter_list"
        iconAfter={false}
        isIconButton={false}
        label="Filter"
      />
      <div
        aria-labelledby="dropdownToggle"
        className="dropdown-menu   "
      >
        

      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Component: Dropdown - renders the toggle button, when passing with specific label and custom icon props 1`] = `
<Fragment>
  <div
    className="dropdown anchor-top-left "
    data-disable-default-keyboard-nav={null}
    id={null}
  >
    

    <div
      className="toggle-menu-container"
    >
      <DropdownToggle
        icon="filter_list"
        iconAfter={true}
        isIconButton={false}
        label="Filter"
      />
      <div
        aria-labelledby="dropdownToggle"
        className="dropdown-menu   "
      >
        

      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Component: Dropdown - renders, when passing no label nor icon props, a toggle button set as secondary button with a chevron icon 1`] = `
<Fragment>
  <div
    className="dropdown anchor-top-left "
    data-disable-default-keyboard-nav={null}
    id={null}
  >
    

    <div
      className="toggle-menu-container"
    >
      <DropdownToggle
        iconAfter={true}
      />
      <div
        aria-labelledby="dropdownToggle"
        className="dropdown-menu   "
      >
        

      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Component: Dropdown - the toggle icon btn with and without a passed icon renders the toggle btn as icon btn with no icon passed has a default of the three vertical dots icon 1`] = `
<Fragment>
  <div
    className="dropdown anchor-top-left "
    data-disable-default-keyboard-nav={null}
    id={null}
  >
    

    <div
      className="toggle-menu-container"
    >
      <DropdownToggle
        iconAfter={true}
        isIconButton={true}
        label="Filter"
      />
      <div
        aria-labelledby="dropdownToggle"
        className="dropdown-menu   "
      >
        

      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Component: Dropdown - the toggle icon btn with and without a passed icon renders the toggle btn as icon btn with the icon passed as props 1`] = `
<Fragment>
  <div
    className="dropdown anchor-top-left "
    data-disable-default-keyboard-nav={null}
    id={null}
  >
    

    <div
      className="toggle-menu-container"
    >
      <DropdownToggle
        icon="sort"
        iconAfter={true}
        isIconButton={true}
        label="Filter"
      />
      <div
        aria-labelledby="dropdownToggle"
        className="dropdown-menu   "
      >
        

      </div>
    </div>
  </div>
</Fragment>
`;
